welcome.lessons.welcome.loopfor.LoopStairs.scala.code
var nbPas = 0
for (nbPas <- 0 to 23)
	while(!estFaceMur())
	{avance()
	nbPas = nbPas + 1 
	if (estFaceMur())
	{gauche()
	avance()
	droite()
	}}
	
